Add start:prod script for Render production deploy

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "Backend NestJS para SignageVirtual Enterprise",
   "scripts": {
     "start": "nest start",
-    "build": "nest build"
+    "start:dev": "nest start --watch",
+    "build": "nest build",
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
